--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -75,4 +75,12 @@
   title = "Types of databases",
   url = "https://www.oracle.com/database/what-is-database/#link5"
 }
+@online{dart,
+  title = "Dart overview",
+  url = "https://dart.dev/overview"
+}
+@online{flutter,
+  title = "Flutter architectural overview",
+  url = "https://flutter.dev/docs/resources/architectural-overview"
+}
 https://www.globalme.net/blog/how-does-speech-recognition-technology-work/
