--- a/Praca_Inzynierska.tex
+++ b/Praca_Inzynierska.tex
@@ -819,7 +819,45 @@
   }
   \subsection{VIM}
   {
-
+    VIM jest zaawansowanym edytorem tekstu opracowanym w 1991 roku, opartym na edytorze
+    "vi", domyślnie dołączanym do większości systemów UNIX. Jest dystrybuowany jako
+    "charityware" - dostęp do niego jest darmowy, ale twórca zachęca do wpłaty pieniędzy
+    na cele charytatywne. VIM charakteryzuje szeroki wachlarz możliwości jakie oferuje,
+    a w odpowiednich rękach pozwala bardzo zwiększyć wydajność pracy. Używanie VIMa
+    nie wymaga myszki, jego głównym celem jest ograniczenie konieczności poruszania ręką
+    pomiędzy klawiaturą, a myszką, na rzecz wykonywania każdej czynności przy takim samym
+    ustawieniu rąk. Wraz z rozwojem aplikacji, stale dodawane są nowe funkcjonalności,
+    mające w jeszcze większym stopniu usprawnić proces pisania. VIM zezwala na
+    modyfikowanie i dodawanie własnych skrótów klawiszowych, oraz posiada wiele opcji
+    konfiguracji, stąd zależnie od preferencji i potrzeb można go dostosować do wielu
+    postaci.\\
+    Do podstawowych opcji udostępnianych przez VIM należą:
+    \begin{itemize}
+      \item do poruszania się kursorem służą klawisze:
+      \begin{itemize}
+        \item h - jeden znak w lewo
+        \item j - linijka w dół
+        \item k - linijka w górę
+        \item l - jeden znak w prawo
+        \item b - poprzednie słowo
+        \item e - koniec słowa
+        \item w - początek następnego słowa
+        \item \$ - koniec linii 
+        \item 0 - początek linii
+      \end{itemize}
+      \item do przełączania się pomiędzy różnymi trybami służą klawisze:
+      \begin{itemize}
+        \item i - Insert mode, włączający możliwość pisania po lewo od kursora
+        \item a - Insert mode, włączający możliwość pisania po prawo od kursora
+        \item o - Insert mode, włączający możliwość pisania o jedną linię niżej
+        \item v - Visual mode, pozwalający zaznaczyć część tekstu
+        \item ESC - umożliwia przejście do Normal mode, domyślnego trybu poruszania się
+        \item : - włączenie trybu Command-line, umożliwiającego dostęp nie tylko do
+        zaawansowanych opcji, ale także opcji zapisu lub wyjścia z pliku
+      \end{itemize} 
+    \end{itemize}
+    Przedstawione wyżej opcje to tylko wierzchołek góry lodowej, a poprawne nauczenie
+    się możliwości oferowanych przez VIM może zająć wiele miesięcy.
   }
 }
 
